--- a/css/styles.css
+++ b/css/styles.css
@@ -5,39 +5,39 @@ header {
     height: 100vh;
     /* position: relative; */
     color: white;
-}
-
-
-/* h1 {
-    padding-top: 15%;
-}
-img {
-    padding-top: 15%;
-} */
-
-#mouse_click {
+  }
+  
+  
+  /* h1 {
+      padding-top: 15%;
+  }
+  img {
+      padding-top: 15%;
+  } */
+  
+  #mouse_click {
     position: absolute;
     top: 95%;
-}
-
-.header {
+  }
+  
+  .header {
     position: relative;
     top: 10%;
     /* text-align: center; */
     /* margin: 25%; */
     /* position: absolute; */
     font-size: 30px;
-}
-
-h1 {
+  }
+  
+  h1 {
     font-weight: 100;
     ;
-}
-
-
-/* Customize the label (the container) */
-
-.container {
+  }
+  
+  
+  /* Customize the label (the container) */
+  
+  .container {
     display: block;
     position: relative;
     padding-left: 35px;
@@ -53,23 +53,23 @@ h1 {
     font-weight: bold;
     display: inline-block;
     /* vertical-align: middle; */
-}
-
-
-/* Hide the browser's default checkbox */
-
-.container input {
+  }
+  
+  
+  /* Hide the browser's default checkbox */
+  
+  .container input {
     position: absolute;
     opacity: 2;
     cursor: pointer;
     height: 0;
     width: 0;
-}
-
-
-/* Create a custom checkbox */
-
-.checkmark {
+  }
+  
+  
+  /* Create a custom checkbox */
+  
+  .checkmark {
     position: absolute;
     top: 0;
     left: 0;
@@ -77,36 +77,36 @@ h1 {
     width: 25px;
     background-color: #eee;
     border: solid lightgray;
-}
-
-
-/* When the checkbox is checked, add a white background */
-
-.container input:checked~.checkmark {
+  }
+  
+  
+  /* When the checkbox is checked, add a white background */
+  
+  .container input:checked~.checkmark {
     background-color: white;
     border: solid #696969;
-}
-
-
-/* Create the checkmark/indicator (hidden when not checked) */
-
-.checkmark:after {
+  }
+  
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  
+  .checkmark:after {
     content: "";
     position: absolute;
     display: none;
-}
-
-
-/* Show the checkmark when checked */
-
-.container input:checked~.checkmark:after {
+  }
+  
+  
+  /* Show the checkmark when checked */
+  
+  .container input:checked~.checkmark:after {
     display: block;
-}
-
-
-/* Style the checkmark/indicator */
-
-.container .checkmark:after {
+  }
+  
+  
+  /* Style the checkmark/indicator */
+  
+  .container .checkmark:after {
     left: 9px;
     top: 5px;
     width: 5px;
@@ -116,99 +116,102 @@ h1 {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-}
-
-
-/* Add a black background color to the top navigation */
-
-.topnav {
+  }
+  
+  
+  /* Add a black background color to the top navigation */
+  
+  .topnav {
     background-color: colourless;
     overflow: hidden;
-}
-
-
-/* Style the links inside the navigation bar */
-
-.topnav a {
+  }
+  
+  
+  /* Style the links inside the navigation bar */
+  
+  .topnav a {
     float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-
-
-/* Change the color of links on hover */
-
-
-/* .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-} */
-
-
-/* Add an active class to highlight the current page */
-
-.active {
+  }
+  
+  
+  /* Change the color of links on hover */
+  
+  
+  /* .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+  } */
+  
+  
+  /* Add an active class to highlight the current page */
+  
+  .active {
     background-color: colourless;
     color: white;
-}
-
-
-/* Hide the link that should open and close the topnav on small screens */
-
-.topnav .icon {
+  }
+  
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  
+  .topnav .icon {
     display: none;
-}
-
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-
-@media screen and (max-width: 600px) {
+  }
+  
+  
+  /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+  
+  @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {
-        display: none;
+      display: none;
     }
+  
     .topnav a.icon {
-        float: right;
-        display: block;
+      float: right;
+      display: block;
     }
-}
-
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-
-@media screen and (max-width: 600px) {
+  }
+  
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  
+  @media screen and (max-width: 600px) {
     .topnav.responsive {
-        position: relative;
+      position: relative;
     }
+  
     .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
     }
+  
     .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
+      float: none;
+      display: block;
+      text-align: left;
     }
-}
-
-.inactive {
+  }
+  
+  .inactive {
     font-size: 20px;
     float: right;
-}
-
-.header p {
+  }
+  
+  .header p {
     font-size: 20px;
-}
-
-.check {
+  }
+  
+  .check {
     background-color: #C0C0C0;
     padding: 5%;
-}
-
-.button {
+  }
+  
+  .button {
     float: right;
     color: white;
     background-color: #800000;
@@ -216,9 +219,9 @@ h1 {
     font-weight: bold;
     border: solid #800000;
     border-radius: 5%;
-}
-
-.products {
+  }
+  
+  .products {
     height: 350px;
     /* width: 300px; */
     display: inline-block;
@@ -228,66 +231,68 @@ h1 {
     width: 30%;
     /* float: left; */
     /* display: block; */
-}
-
-.products img {
+  }
+  
+  .products img {
     display: block;
     margin: auto;
-}
-
-.products p {
+  }
+  
+  .products p {
     margin-left: 15px;
     /* display: none; */
-}
-
-.products:hover {
+  }
+  
+  .products:hover {
     border: 5px solid #696969;
     border-radius: 2%;
-}
-
-hr {
+  }
+  
+  hr {
     width: 1000px;
     margin-left: auto;
     margin-right: auto;
     height: 1px;
     background-color: #666;
     opacity: 0.5;
-}
-
-#line {
+  }
+  
+  #line {
     display: inline-block;
-}
-
-fieldset {
+  }
+  
+  .fieldset {
+    background-image: url('../assets/backgrounds/About-Us.jpg');
     border: 2px solid #C0C0C0;
     height: 25%;
     width: 50%;
+    text-align: center;
     /* position: relative; */
     margin-left: auto;
     margin-right: auto;
     /* margin-top: 50px; */
-}
-
-legend {
+  }
+  
+  legend {
     text-align: center;
-}
-
-fieldset p {
+  
+  }
+  
+  fieldset p {
     text-align: center;
-}
-
-.hero{
-    background-image: url('../assets\backgrounds\About-Us.jpg');
+  }
+  
+  .hero{
+    background-image: url('../assets/backgrounds/About-Us.jpg');
     background-size: 100% 100%;
+    margin: 0px 15px 15px 0px;
     text-align: center;
     padding: 5%;
-     color: white;
-     font-size:25px;
- }
+    font-size: 25px;
+  }
+  
 
-}
-
-.twitter {
+  .twitter {
     background-color: #C0C0C0;
     color: white;
     text-align: center;
@@ -296,25 +301,26 @@ fieldset p {
     padding: 1%;
     font-size: 20px;
     /* position: absolute; */
-}
-
-footer {
+  }
+  
+  footer {
     background-color: #696969;
     padding: 1%;
     text-align: center;
     color: white;
-}
-
-.column {
+  }
+  
+  .column {
     float: left;
     width: 33.33%;
-}
-
-
-/* Clear floats after the columns */
-
-footer:after {
+  }
+  
+  
+  /* Clear floats after the columns */
+  
+  footer:after {
     content: "";
     display: table;
     clear: both;
-}
+  }
+  
